# architecture-patterns-python

./: .gitignore  pyproject.toml  pyrightconfig.json
app/: model.py  repository.py
app/adapters/: repository.py
app/domain/: commands.py  events.py  model.py
app/entrypoints/: flask_app.py
app/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
tests/: conftest.py  test_allocate.py  test_batches.py  test_repository.py
tests/e2e/: test_api.py
tests/integration/: test_repository.py  test_uow.py
tests/unit/: test_batches.py  test_handlers.py  test_product.py  test_services.py
