[tool.poetry]
name = "architecture-patterns-python"
version = "0.1.0"
description = "project from book \"Architecture Patterns with Python\""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "architecture_patterns_python"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.42"
flask = "^2.2.2"
requests = "^2.28.1"
tenacity = "^8.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
